# cursor-dev-rules

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
cursor_dev_rules/: __init__.py  cli.py
cursor_dev_rules/rules/frontend/general/: RULE.md
rules/backend/django/: RULE.md
rules/frontend/nextjs/: RULE.md
tests/: __init__.py  conftest.py  test_cli.py  test_utils.py
