[project]
name = "cursor-dev-rules"
version = "0.1.1"
description = "CLI tool to fetch and install Cursor dev rules into your project"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "amartya-dev", email = "amarkaushik1999@gmail.com"},
]
keywords = ["cursor", "dev-rules", "ide", "development", "cli", "django", "fastapi", "nextjs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]
[project.urls]
Homepage = "https://github.com/Ohuru-Tech/cursor-dev-rules"
Documentation = "https://github.com/Ohuru-Tech/cursor-dev-rules#readme"
Repository = "https://github.com/Ohuru-Tech/cursor-dev-rules"
Issues = "https://github.com/Ohuru-Tech/cursor-dev-rules/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
cursor-dev-rules = "cursor_dev_rules.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["cursor_dev_rules"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=cursor_dev_rules",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
